--- a/src/Components/LeadsComponent/LeadTable/LeadTable.css
+++ b/src/Components/LeadsComponent/LeadTable/LeadTable.css
@@ -1,6 +1,8 @@
-.leads-table-wrapper {
-  /* TODO: Replace `67px` with pagination height */
-  margin-bottom: 67px;
+.leads-table {
+  width: 100%;
+  /* TODO: Replace 67px with dynamic heigh of pagination */
+  height: calc(100% - 67px);
+  overflow-y: scroll;
 }
 
 .lead-workflow-content {
@@ -20,11 +22,4 @@
 
 .row-id:hover {
   text-decoration: underline;
-}
-
-.pagination-leads-table {
-  position: fixed;
-  bottom: 0;
-  background-color: white;
-  width: 100%;
 }
